logs/achemkit.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/AChemKit'...
Compiling './lib/python3.5/site-packages/AChemKit/bucket.py'...
***   File "./lib/python3.5/site-packages/AChemKit/bucket.py", line 96
    raise ValueError, "invalid reaction: "+reaction
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/AChemKit/properties.py'...
***   File "./lib/python3.5/site-packages/AChemKit/properties.py", line 32
    for reaction in itertools.ifilter(lambda (reactants, products):len(products) < len(reactants), rn.reactions):
                                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/AChemKit/reactionnet.py'...
***   File "./lib/python3.5/site-packages/AChemKit/reactionnet.py", line 196
    raise ValueError, "Invalid reaction at line %d : %s" % (linecount, rawline)
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/AChemKit/reactionnetdot.py'...
***   File "./lib/python3.5/site-packages/AChemKit/reactionnetdot.py", line 130
    raise ValueError, 'names must be one of "full", "id", or "blank"'
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/AChemKit/sims_gillespie.py'...
***   File "./lib/python3.5/site-packages/AChemKit/sims_gillespie.py", line 55
    raise ValueError, "cannot determine possible no's of reactants"
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/AChemKit/sims_gillespie_test.py'...
***   File "./lib/python3.5/site-packages/AChemKit/sims_gillespie_test.py", line 32
    print self.net
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/AChemKit/sims_simple.py'...
***   File "./lib/python3.5/site-packages/AChemKit/sims_simple.py", line 194
    print newmols, products, reactants
                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/AChemKit/tools'...
Listing './lib/python3.5/site-packages/AChemKit/utils'...
Compiling './lib/python3.5/site-packages/AChemKit/utils/bag.py'...
***   File "./lib/python3.5/site-packages/AChemKit/utils/bag.py", line 25
    raise TypeError, "non-iterabble passed ("+repr(iterable)+")"
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/AChemKit/utils/simpledot.py'...
***   File "./lib/python3.5/site-packages/AChemKit/utils/simpledot.py", line 91
    raise LookupError, key
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/AChemKit/utils/utils.py'...
***   File "./lib/python3.5/site-packages/AChemKit/utils/utils.py", line 132
    raise NotImplementedError, "Will only work with Linux or Windows"
                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/AChemKit-0.3.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
